# EMLO4

./: .gitignore  README.md  pyproject.toml
.dvc/: config
.github/workflows/: modal-deploy.yml  s05-assignment-ci.yml  s05-ci.yml  s06-assignment-dvc.yml  s06-cml.yml  s07-hparam-optuna.yml  s10-deploy.yml
Session02_Docker_Basics/: .gitignore  .gitpod.Dockerfile  Dockerfile  README.md  requirements.txt  train.py
Session02_Docker_Basics/pytorch-docker/: Dockerfile
Session02_Docker_Basics/tests/: grading.sh
Session03_Docker_Compose/: Dockerfile  README.md  docker-compose.yml
Session03_Docker_Compose/src/: eval.py  infer.py  model.py  train.py
Session03_docker/: docker-compose.yml  model.py
Session03_docker/model-eval/: check_eval.py  evaluate.py
Session03_docker/model-inference/: Dockerfile.infer  infer.py
Session03_docker/model-train/: Dockerfile.train  check_train.py
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/: .gitignore  README.md  pyproject.toml
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/logs/catdog_classification/version_0/: events.out.tfevents.1746420646.sagar431-emlo4-cydkaamfyz6.27798.0
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/logs/catdog_classification/version_1/: events.out.tfevents.1746420813.sagar431-emlo4-cydkaamfyz6.28699.0
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/logs/catdog_classification/version_2/: events.out.tfevents.1746420917.sagar431-emlo4-cydkaamfyz6.29324.0
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/logs/catdog_classification/version_3/: events.out.tfevents.1746421034.sagar431-emlo4-cydkaamfyz6.29921.0  events.out.tfevents.1746421280.sagar431-emlo4-cydkaamfyz6.29921.1
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/src/: infer.py  train.py
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/src/datamodules/: catdog_datamodule.py
Session04_PyTorch_Lightning_Basics/Lightning-template-Hydra/src/utils/: rich_utils.py
Session04_PyTorch_Lightning_Basics/dog_breed_classifier/: .gitignore  Dockerfile  README.md  docker-compose.yml
Session05_PyTorch_Lightning_Advanced/: README.md
Session05_PyTorch_Lightning_Advanced/Lightning-template-Hydra-ci/: pyproject.toml
Session05_PyTorch_Lightning_Advanced/Lightning-template-Hydra-ci/.github/worflows/: ci.yml
Session05_PyTorch_Lightning_Advanced/Lightning-template-Hydra-ci/.github/workflows/: ci.yml
Session05_PyTorch_Lightning_Advanced/Lightning-template-Hydra-ci/tests/: conftest.py
Session05_PyTorch_Lightning_Advanced/Lightning-template-Hydra-ci/tests/unit/: test_datamodule.py
Session07_Experiment_Tracking/: README.md
Session12_TorchServe/: README.md
Session13_Kubernetes_Basics/: README.md
Session14_Kubernetes_Monitoring/: README.md
Session15_Kubernetes_EKS/: README.md
Session16_Kubernetes_KServe/: README.md
Session17_Canary_Deployment/: README.md
s02/: .gitpod.yml  Dockerfile  README.md
s02/tests/: grading.sh
s03/: README.md
s03/catgif-docker/: docker-compose.yml
s03/tests/: grading.sh
s03b/: README.md
s03b/model-eval/: Dockerfile.eval
s03b/model-train/: train.py
s04/: README.md
s04/Lightning-template-Hydra/: .gitignore  lightning_tutorial.py
s04/dog_breed_classifier/: README.md  main.py  pyproject.toml  requirements.txt
s05/Assignment/: .gitignore  Dockerfile  pyproject.toml
s05/Assignment/configs/data/: dog_breed.yaml
s05/Assignment/configs/paths/: default.yaml
s05/Assignment/src/: eval.py
s05/Assignment/tests/unit/: test_coverage.py  test_datamodule.py  test_eval_script.py
s05/Lightning-template-Hydra-ci/: .gitignore  pyproject.toml
s05/Lightning-template-Hydra-ci/configs/callbacks/: early_stopping.yaml
s05/Lightning-template-Hydra-ci/configs/data/: catdog.yaml
s05/Lightning-template-Hydra-ci/configs/model/: timm_classify.yaml
s05/Lightning-template-Hydra-ci/src/: infer.py
s05/Lightning-template-Hydra-ci/tests/integration/: test_train.py
s05/Lightning-template-Hydra-ci/tests/unit/: test_configs.py  test_model.py
s06/: README.md
s06/Assignment/: .gitignore  README.md  data.dvc  dvc.yaml  pyproject.toml
s06/Lightning-Hydra-DVC/: .gitignore  data.dvc  dvc.yaml  pyproject.toml
s07/: README.md  pyproject.toml
s07/scripts/: generate_plots.py  generate_test_metrics.py
s07/z_assingment/: .gitignore  README.md  data.dvc  pyproject.toml
s08/: README.md
s09/: README.md
s10/: README.md
s11/: README.md
s12/Torchserve/: .gitignore  README.md  app.py  config.properties  download_model.py  gen_images.py  handler.py  prompts.txt  pyproject.toml  requirements.txt  setup.sh  test_endpoint.py  z_image_turbo.py  zip_model.sh
s12/Torchserve/images/: generation_log.txt
s13/: .gitignore
(+121 files in other folders)
